# FullTextSearchEngine

./: README.md
ftse/: CMakeLists.txt
ftse/src/: buffer.cpp  buffer.h  database.cpp  database.h  encoding.cpp  encoding.h  ftse_env.cpp  ftse_env.h  global.h  main.cpp  postings.cpp  postings.h  search.cpp  search.h  token.cpp  token.h  utils.cpp  utils.h
